--- a/paper/1_Initial/_extensions/wjschne/apaquarto/_extension.yml
+++ b/paper/1_Initial/_extensions/wjschne/apaquarto/_extension.yml
@@ -1,13 +1,14 @@
 title: My Document in APA Style, Seventh Edition
 author: W. Joel Schneider
-version: 3.1.1
+version: 4.3.0
 quarto-required: ">=1.4.549"
 contributes:
   formats:
     common:
       execute:
         echo: false
-      citeproc: true
+      citeproc: false
+      link-citations: true
       fig-cap-location: top
       tbl-cap-location: top
       cap-location: top
@@ -15,7 +16,49 @@ contributes:
       toc: false
       fig-width: 6.5
       fig-height: 6.5
+      suppress-title-page: false
+      suppress-title-page-number: false
+      suppress-title: false
+      suppress-short-title: false
+      suppress-author: false
+      suppress-affiliation: false
+      suppress-author-note: false
+      suppress-orcid: false
+      suppress-status-change-paragraph: false
+      suppress-disclosures-paragraph: false
+      suppress-credit-statement: false
+      suppress-corresponding-paragraph: false
+      suppress-corresponding-group: false
+      suppress-corresponding-department: false
+      suppress-corresponding-affiliation-name: false
+      suppress-corresponding-address: false
+      suppress-corresponding-city: false
+      suppress-corresponding-region: false
+      suppress-corresponding-postal-code: false
+      suppress-corresponding-email: false
+      suppress-abstract: false
+      suppress-keywords: false
+      suppress-title-introduction: false
+      no-ampersand-parenthetical: false
+      language: 
+        citation-last-author-separator: "and"
+        citation-masked-author: "Masked Author"
+        citation-masked-title: "Masked Title"
+        citation-masked-date: "n.d."
+        email: "Email"
+        figure-table-note: "Note"
+        section-title-abstract: "Abstract"
+        section-title-appendix: "Appedix"
+        section-title-references: "References"
+        title-block-author-note: "Author Note"
+        title-block-correspondence-note: "Correspondence concerning this article should be addressed to"
+        title-block-role-introduction: "Author roles were classified using the Contributor Role Taxonomy (CRediT; https://credit.niso.org/) as follows:"
+        references-meta-analysis: "Las referencias marcadas con un asterisco indican estudios incluidos en el metanálisis."
       filters:
+        - at: pre-ast
+          path: apalanguage.lua
+        - at: pre-ast
+          path: crossrefprefix.lua
         - at: pre-ast
           path: apafloatstoend.lua
         - at: pre-ast
@@ -23,17 +66,31 @@ contributes:
         - at: pre-ast
           path: journalmode.lua
         - at: pre-ast
+          path: apafigurewidthlatex.lua          
+        - at: pre-ast
           path: apafigurelatex.lua
+        - at: pre-ast
+          path: apaomitrefsdiv.lua
+        - at: post-ast
+          path: apamasked.lua
         - at: post-ast
           path: apatwocolumnlatex.lua
-        - apaheader.lua
-        - apastriptitle.lua
-        - docxfrontmatter.lua
-        - apaquote.lua
-        - apaandcite.lua
-        - latexnoindent.lua
+        - at: pre-quarto
+          path: apaheader.lua
+        - at: pre-quarto
+          path: apastriptitle.lua
+        - at: pre-quarto
+          path: frontmatter.lua
+        - at: pre-quarto
+          path: apaquote.lua
+        - at: pre-quarto
+          path: latexnoindent.lua
+        - at: pre-quarto
+          path: apafigtblappendix.lua
         - at: post-quarto
           path: apafloatlatex.lua
+        - at: post-quarto
+          path: apaoneauthoraffiliation.lua
         - at: post-render
           path: apaextractfigure.lua
         - at: post-render
@@ -44,6 +101,12 @@ contributes:
           path: apacaption.lua
         - at: post-render
           path: apaafternote.lua
+        - at: post-render
+          path: citeprocr.lua
+        - at: post-render
+          path: apaandcite.lua
+        - at: post-render
+          path: apaappendixlatex.lua
     native: default
     html:
       toc: true
@@ -65,12 +128,12 @@ contributes:
     pdf:
       documentclass: apa7
       pdf-engine: xelatex
-      link-ciations: false
       suppress-bibliography: false
       hyperrefoptions: 
         - linktoc=none
       block-headings: false
-      template: template.tex
+      template: apatemplate.tex
+      mainfontfallback: Arial
       template-partials:
         - doc-class.tex
         - title.tex
@@ -80,7 +143,17 @@ contributes:
     docx: 
       reference-doc: apaquarto.docx
       filters: 
-        - docxstyler.lua
+        - at: post-quarto
+          path: docxstyler.lua
+        - at: post-render
+          path: docxlinenumber.lua
       knitr: 
         opts_chunk: 
           dev: ragg_png
+    typst:
+      filters: 
+        - at: post-quarto
+          path: typst/formattypst.lua
+      template-partials:
+        - typst/typst-template.typ
+        - typst/typst-show.typ
