--- a/paper/1_Initial/_extensions/apaquarto/_extension.yml
+++ b/paper/1_Initial/_extensions/apaquarto/_extension.yml
@@ -1,6 +1,6 @@
 title: My Document in APA Style, Seventh Edition
 author: W. Joel Schneider
-version: 4.3.0
+version: 4.3.8
 quarto-required: ">=1.4.549"
 contributes:
   formats:
@@ -47,9 +47,6 @@ contributes:
         citation-masked-date: "n.d."
         email: "Email"
         figure-table-note: "Note"
-        section-title-abstract: "Abstract"
-        section-title-appendix: "Appedix"
-        section-title-references: "References"
         title-block-author-note: "Author Note"
         title-block-correspondence-note: "Correspondence concerning this article should be addressed to"
         title-block-role-introduction: "Author roles were classified using the Contributor Role Taxonomy (CRediT; https://credit.niso.org/) as follows:"
@@ -114,11 +111,11 @@ contributes:
       anchor-sections: false
       fig-cap-location: top
       html-math-method: katex
+      mainfont: Times, Times New Roman, serif
       grid: 
         body-width: "7in"
       css: apa.css
       theme: 
-        - litera
         - apa.scss
       template-partials:
         - title-block.html
